Setup Receiver.html Layout

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>File Sharing App</title>
-  <link rel="stylesheet" type="'text/css" href = "style.css">
+  <link rel="stylesheet" type="text/css" href = "style.css">
 </head>
 <body>
   <div class = "app">
-    <div class = "screen join-screen active">
+    <div class = "screen join-screen">
       <div class = "form">
         <h2>Saturn - Seemless file sharing</h2>
         <div class = "form-input">
@@ -19,7 +19,7 @@
         </div>
       </div>
     </div>
-    <div class = "screen fs-screen">
+    <div class = "screen fs-screen active">
       <div class = "file-input">
         <label for="file-input">
           Browse Files to Send
@@ -28,10 +28,10 @@
       </div>
       <div class = "files-list">
         <div class = "title"> Shared Files:</div>
-        <div class = "item">
+        <!-- <div class = "item">
           <div class = "progress"> 0%</div>
           <div class = "filename">Abc.txt</div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
