--- a/public/receiver.html
+++ b/public/receiver.html
@@ -2,42 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>File Sharing App</title>
-  <link rel="stylesheet" type="'text/css" href = "style.css">
+  <link rel="stylesheet" type="text/css" href = "style.css">
 </head>
 <body>
   <div class = "app">
     <div class = "screen join-screen active">
       <div class = "form">
         <h2>Saturn - Seemless file sharing</h2>
-        <div class = "form-input">
-          <button id = "sender-start-con-btn">Create Share-link</button>
+        <div class= "form-input">
+            <label for = "join-id"> Join ID</label>
+            <input type="text" id="join-id">
         </div>
-        <div class = "form-input" id = "join-id">
+        <div class = "form-input">
+          <button id = "receiver-start-con-btn">Connect Now</button>
+        </div>
+        <!-- <div class = "form-input" id = "join-id">
           <b> Room ID</b>
           <span>000-000-000</span>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class = "screen fs-screen">
-      <div class = "file-input">
+      <!-- <div class = "file-input">
         <label for="file-input">
           Browse Files to Send
         </label>
         <input type = "file" id = "file-input">
-      </div>
+      </div> -->
       <div class = "files-list">
         <div class = "title"> Shared Files:</div>
-        <div class = "item">
+        <!-- <div class = "item">
           <div class = "progress"> 0%</div>
           <div class = "filename">Abc.txt</div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
-  <script type src="socket.io/socket.io.js"></script>
-  <script type src="code.js"></script>
+  <script type = "text/javascript" src="https://cdnjs.cloudfare.com/ajax/libs/downloadjs/1.4.1/download.min.js"></script>
+  <script type = "text/javascript" src="socket.io/socket.io.js"></script>
+  <script type = "text/javascript" src="code.js"></script>
 
 
 </body>
