--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,19 @@
 </head>
 <body>
   <div class = "app">
-    <div class = "screen join-screen">
+    <div class = "screen join-screen active">
       <div class = "form">
         <h2>Saturn - Seemless file sharing</h2>
         <div class = "form-input">
           <button id = "sender-start-con-btn">Create Share-link</button>
         </div>
         <div class = "form-input" id = "join-id">
-          <b> Room ID</b>
-          <span>000-000-000</span>
+          <!-- <b> Room ID</b>
+          <span>000-000-000</span> -->
         </div>
       </div>
     </div>
-    <div class = "screen fs-screen active">
+    <div class = "screen fs-screen">
       <div class = "file-input">
         <label for="file-input">
           Browse Files to Send
