--- a/public/receiver.html
+++ b/public/receiver.html
@@ -41,7 +41,7 @@
   </div>
   <script type = "text/javascript" src="https://cdnjs.cloudfare.com/ajax/libs/downloadjs/1.4.1/download.min.js"></script>
   <script type = "text/javascript" src="socket.io/socket.io.js"></script>
-  <script type = "text/javascript" src="code.js"></script>
+  <script type = "text/javascript" src="receiver.js"></script>
 
 
 </body>
