--- a/public/receiver.html
+++ b/public/receiver.html
@@ -1,48 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>File Sharing App</title>
-  <link rel="stylesheet" type="text/css" href = "style.css">
+	<meta charset="utf-8">
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class = "app">
-    <div class = "screen join-screen active">
-      <div class = "form">
-        <h2>Saturn - Seemless file sharing</h2>
-        <div class= "form-input">
-            <label for = "join-id"> Join ID</label>
-            <input type="text" id="join-id">
-        </div>
-        <div class = "form-input">
-          <button id = "receiver-start-con-btn">Connect Now</button>
-        </div>
-        <!-- <div class = "form-input" id = "join-id">
-          <b> Room ID</b>
-          <span>000-000-000</span>
-        </div> -->
-      </div>
-    </div>
-    <div class = "screen fs-screen">
-      <!-- <div class = "file-input">
-        <label for="file-input">
-          Browse Files to Send
-        </label>
-        <input type = "file" id = "file-input">
-      </div> -->
-      <div class = "files-list">
-        <div class = "title"> Shared Files:</div>
-        <!-- <div class = "item">
-          <div class = "progress"> 0%</div>
-          <div class = "filename">Abc.txt</div>
-        </div> -->
-      </div>
-    </div>
-  </div>
-  <script type = "text/javascript" src="https://cdnjs.cloudfare.com/ajax/libs/downloadjs/1.4.1/download.min.js"></script>
-  <script type = "text/javascript" src="socket.io/socket.io.js"></script>
-  <script type = "text/javascript" src="receiver.js"></script>
-
-
+	<div class="app">
+		<div class="screen join-screen active">
+			<div class="form">
+				<h2>Share your files securely</h2>
+				<div class="form-input">
+					<label>Join ID</label>
+					<input type="text" id="join-id">
+				</div>
+				<div class="form-input">
+					<button id="receiver-start-con-btn">Connect</button>
+				</div>
+			</div>
+		</div>
+		<div class="screen fs-screen">
+			<div class="files-list">
+				<div class="title">Shared files</div>
+			</div>	
+		</div>
+	</div>
+	<script type="text/javascript" src="socket.io/socket.io.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/downloadjs/1.4.1/download.min.js"></script>
+	<script type="text/javascript" src="receiver.js"></script>
 </body>
 </html>
